# AI

./: .dockerignore  .gitignore  1.gradiotest.py  2.teminaltest.py  3.testTavily.py  4.Vectortest.py  5.scoretest.py  6.chapter_summary_test.py  Dockerfile  llm_model.py  main.py  main2.py  main3.py  main4.py  main5.py  main_Deploy.py  main_vector.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ai_main.yml
llm-service/: main.py  quiz_generator.py  quiz_solver.py  test.py
llm-service/quiz_data/: ch02_암호 기초.json
llm-service/utils/: prompt_templates.py
pdf_vectors/: index.pkl
uploaded_pdfs/adfdfec5f207f806e93fbbcdc2a93292/: index.pkl
vector_stores/00707701188e874b350bb3d5d83ec532/: index.faiss  index.pkl
vector_stores/0a50d1d56287b9afecca7b8b22f2bd92/: index.pkl
vector_stores/1150f19faa0e4013f456f5e872a9cb9f/: index.pkl
vector_stores/115206e56a11007158430529a2df1f18/: index.faiss  index.pkl
vector_stores/17fa98017edffcd507050d2d860d4052/: index.faiss  index.pkl
vector_stores/27b47a1ba7b0fd03e515d4dba8b5f7ed/: index.faiss  index.pkl
vector_stores/2c74c57409a931ef6171d13c74ba6711/: index.faiss  index.pkl
vector_stores/31bde74aaaf88e13408dd0b07a93a2f6/: index.faiss  index.pkl
vector_stores/3976297c069b2d7f219dbb082047bccf/: index.faiss  index.pkl
vector_stores/44721cf38b54ce005a7dafda6f687ab5/: index.faiss  index.pkl
vector_stores/4ed9eed1f8ec2e15d593c6aad56a535b/: index.faiss  index.pkl
vector_stores/552255de019174fe135c1dccb65186bf/: index.faiss  index.pkl
vector_stores/56e71bc8952c3bcaee34e0826e9f4328/: index.pkl
(+72 files in other folders)
