[project]
name = "ai-module"
version = "0.1.0"
description = ""
authors = [
    {name = "SHIN MYEONG CHEOL",email = "shin3481@gmail.com"}
]
readme = "README.md"
python = ">=3.10,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
